✨ feat(roles): add batch get roles api
