# docs/swagger.yaml
@@ -789,6 +789,29 @@ paths:
       summary: 根据id获取角色
       tags:
       - Role
+  /v1/role/batch-get:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 角色ID集合
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.IdsReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 根据id列表批量获取角色
+      tags:
+      - Role
   /v1/role/list:
     post:
       consumes:
